#87 In-progress work for invader AI